player movement aangemaakt + benodigde classes
boe

--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Model\World.cs" />
     <Compile Include="View\Level1.xaml.cs">
       <DependentUpon>Level1.xaml</DependentUpon>
     </Compile>
