Centrale Move methode
Nog niet overal geïmplementeerd

--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -69,6 +69,7 @@
     </Compile>
     <Compile Include="Model\Ghost.cs" />
     <Compile Include="Model\Skeleton.cs" />
+    <Compile Include="Model\Walker.cs" />
     <Compile Include="Model\World.cs" />
     <Compile Include="Model\Zombie.cs" />
     <Compile Include="View\Level1.xaml.cs">
