nieuwe tree png's geinclude

--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -176,5 +176,17 @@
   <ItemGroup>
     <Resource Include="View\Skins\mario.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\tree_part1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\tree_part2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\tree_part3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\tree_part4.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
