--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -188,5 +188,8 @@
   <ItemGroup>
     <Resource Include="View\Images\tree_part4.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\Background_Menu2.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
