--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F80E50CA-A26B-4B65-A252-7FF04C2E3AAB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Game</RootNamespace>
-    <AssemblyName>Game</AssemblyName>
+    <AssemblyName>Trick Or Treat</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,6 +33,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>TrickOrTreat.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -109,7 +112,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Resource Include="HallowenInline.otf" />
+    <Resource Include="View\Fonts\youmurdererbb_reg.otf" />
+    <Resource Include="View\Fonts\HallowenInline.otf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -191,6 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="View\Skins\zombie.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TrickOrTreat.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
