--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -55,9 +55,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="View\ChooseDifficulty.xaml.cs">
+      <DependentUpon>ChooseDifficulty.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\CustomizeCharacter.xaml.cs">
       <DependentUpon>CustomizeCharacter.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\ChooseDifficulty.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Level1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
