--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <Resource Include="View\Images\grass.png" />
     <Resource Include="View\Images\house.png" />
+    <Resource Include="View\Images\LevelProps\Tube_Stone.png" />
     <Resource Include="View\Images\path.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -268,6 +269,13 @@
   <ItemGroup>
     <Resource Include="View\Images\House_Part1.png" />
     <Resource Include="View\Images\House_Part2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Images\LevelProps\DeadBody.png" />
+    <Resource Include="View\Images\LevelProps\HalloweenCat.png" />
+    <Resource Include="View\Images\LevelProps\Pumpkin_1.png" />
+    <Resource Include="View\Images\LevelProps\Pumpkin_2.png" />
+    <Resource Include="View\Images\LevelProps\Pumpkin_3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
