Audio file voor died
Audio file toegevoegd

--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -288,5 +288,8 @@
   <ItemGroup>
     <Resource Include="PropIcons\candy.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="View\Audio\YouDied.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
