--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -289,6 +289,7 @@
     <Resource Include="PropIcons\candy.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="View\died.wav" />
     <Content Include="View\Audio\YouDied.mp3" />
     <Content Include="View\Audio\YouDied.wav" />
   </ItemGroup>
