De test de juist naam gegeven

--- a/Game/GameTests/GameTests.csproj
+++ b/Game/GameTests/GameTests.csproj
@@ -56,7 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="MainWindowTests.cs" />
+    <Compile Include="PropTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
