--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -295,6 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\YouDied.wav" />
+    <Resource Include="Scores.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
