--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -132,7 +132,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="View\Scores.xml" />
+    <Content Include="View\xml\Scores.xml" />
     <Resource Include="View\Fonts\youmurdererbb_reg.otf" />
     <Resource Include="View\Fonts\HallowenInline.otf" />
     <None Include="Properties\Settings.settings">
