--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -132,7 +132,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="View\xml\Scores.xml" />
+    <Resource Include="View\xml\Scores.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="View\Fonts\youmurdererbb_reg.otf" />
     <Resource Include="View\Fonts\HallowenInline.otf" />
     <None Include="Properties\Settings.settings">
@@ -296,6 +298,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\YouDied.wav" />
+    <Resource Include="View\Scores.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
