--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -295,7 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\YouDied.wav" />
-    <Resource Include="View\Scores.xml">
+    <Resource Include="Scores.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Scores.xml" />
